# last-modified-hook

./: .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/: changelog-labels.yaml  release-drafter-config.yaml
.github/workflows/: labeler.yaml  release-drafter.yaml
docs/source/: changelog.md  conf.py  index.md  last_modified_hook_cli.rst
docs/source/api-reference/: last_modified_hook.rst  modules.rst
src/last_modified_hook/: __about__.py  __init__.py  find_and_replace.py  last_modified_hook.py
tests/: __init__.py
tests/last_modified_hook/: conftest.py  last_modified_hook_test.py
