[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "last-modified-hook"
description = 'A pre-commit hook That updates a last_modified comment field in python source code files.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["python", "pre-commit", "hook"]
authors = [{ name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]
[project.optional-dependencies]
dev = [

  # Linting and Formatting
  "black",
  "coverage",
  "pylint",
  "mypy",
  # "doc8",

  # Testing
  "tox",
  "pytest",
  "pytest-cov",

  # Source control
  "pre-commit",

  # Tools
  "pysnooper",

  # Documentation
  "Sphinx",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx_rtd_theme",
  "myst-parser",

  # Vscode
  "esbonio",
  "rst2html",
  "rstcheck",
]


[project.scripts]
last-modified-hook = "last_modified_hook.last_modified_hook:cli"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.black]
line-length = 88
target-version = ['py310']

# https://pylint.pycqa.org/en/latest/user_guide/usage/run.html#command-line-options
# https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html#standard-checkers
# pylint --generate-toml-config > ./pylint-toml-example.toml
# [tool.pylint.messages_control]
# disable = [
#     "raw-checker-failed",
#     "bad-inline-option",
#     "locally-disabled",
#     "file-ignored",
#     "suppressed-message",
#     "useless-suppression",
#     "deprecated-pragma",
#     "use-symbolic-message-instead"
# ]

[tool.pylint.format]
# for black compatability
max-line-length = "88"

[project.urls]
Documentation = "https://github.com/DonalChilde/last-modified-hook#readme"
Issues = "https://github.com/DonalChilde/last-modified-hook/issues"
Source = "https://github.com/DonalChilde/last-modified-hook"

[tool.hatch.version]
path = "src/last_modified_hook/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/last_modified_hook --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/last_modified_hook/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
