[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "last-modified-hook"
description = 'A pre-commit hook That updates a last_modified comment field in python source code files.'
version = 'v0.0.4'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["python", "pre-commit", "hook"]
authors = [{ name = "Chad Lowe" }, { email = "pfmsoft.dev@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
]
dependencies = []
[project.optional-dependencies]
dev = [

  # Automation
  "nox",
  "pre-commit",

  # Linting and Formatting
  "black",
  "isort",

  # Tools
  "pysnooper",
]
lint = ["pylint", "mypy"]
doc = [
  # Documentation
  "Sphinx",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx_rtd_theme",
  "myst-parser",
  "sphinx-argparse",
]
vscode = ["esbonio", "rst2html", "rstcheck"]
testing = ["pytest", "coverage", "pytest-cov"]


[project.scripts]
last-modified-hook = "last_modified_hook.last_modified_hook:cli"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.black]
line-length = 88
target-version = ['py310']

# https://pylint.pycqa.org/en/latest/user_guide/usage/run.html#command-line-options
# https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html#standard-checkers
# pylint --generate-toml-config > ./pylint-toml-example.toml
# [tool.pylint.messages_control]
# disable = [
#     "raw-checker-failed",
#     "bad-inline-option",
#     "locally-disabled",
#     "file-ignored",
#     "suppressed-message",
#     "useless-suppression",
#     "deprecated-pragma",
#     "use-symbolic-message-instead"
# ]

[tool.pylint.format]
# for black compatability
max-line-length = "95"

[project.urls]
Documentation = "https://github.com/DonalChilde/last-modified-hook#readme"
Documentation_rtd = "https://last-modified-hook.readthedocs.io"
Issues = "https://github.com/DonalChilde/last-modified-hook/issues"
Source = "https://github.com/DonalChilde/last-modified-hook"


[tool.coverage.run]
branch = true
parallel = true
omit = ["src/last_modified_hook/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
